--- a/booking/src/main/resources/application.yml
+++ b/booking/src/main/resources/application.yml
@@ -1,5 +1,16 @@
 spring:
+  datasource:
+    driver-class-name: org.h2.Driver
+    username: SA
+    password:
+    hikari:
+      jdbc-url: jdbc:h2:tcp://localhost/~/test
   jpa:
+    open-in-view: false
+    show-sql: true
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
         show_sql: true
+    hibernate:
+      ddl-auto: create-drop
