--- a/booking/settings.gradle
+++ b/booking/settings.gradle
@@ -1,1 +1,14 @@
+// settings.gradle
+
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        jcenter()
+        maven {
+            name "JCenter Gradle Plugins"
+            url  "https://dl.bintray.com/gradle/gradle-plugins"
+        }
+    }
+}
+
 rootProject.name = 'booking'
