--- a/booking/src/main/resources/application.yml
+++ b/booking/src/main/resources/application.yml
@@ -8,9 +8,8 @@ spring:
   jpa:
     open-in-view: false
     show-sql: true
+    hibernate.hbm2ddl.auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
         show_sql: true
-    hibernate:
-      ddl-auto: create-drop
