--- a/booking/build.gradle
+++ b/booking/build.gradle
@@ -2,6 +2,10 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.9'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+
+	// avro
+	id "com.github.davidmc24.gradle.plugin.avro" version "1.3.0"
+
 }
 
 group = 'com'
@@ -26,6 +30,16 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+
+	// avro
+	implementation 'org.apache.avro:avro:1.11.0'
+
+	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-stream-binder-kafka
+	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka:3.2.2'
+
 }
 
 tasks.named('test') {
