--- a/booking/src/main/resources/application.yml
+++ b/booking/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     username: SA
     password:
     hikari:
-      jdbc-url: jdbc:h2:tcp://localhost/~/test
+      jdbc-url: jdbc:h2:mem:testdb
   jpa:
     open-in-view: false
     show-sql: true
@@ -13,3 +13,12 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
         show_sql: true
+        format_sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+logging:
+  level:
+    root: info
